--- a/multiSocket/Makefile
+++ b/multiSocket/Makefile
@@ -1,6 +1,7 @@
 all:
 	g++ -o server server.cpp -lpthread -lwiringPi
 	g++ -o client client.cpp -lpthread -lwiringPi
+	g++ -o client2 client2.cpp -lpthread -lwiringPi
 
 clean:
-	rm server client
+	rm server client client2
