--- a/epoll/Makefile
+++ b/epoll/Makefile
@@ -1,4 +1,4 @@
 all: 
 	g++ -o client client.cpp client.h -lpthread
-	g++ -o server server.cpp server.h
+	g++ -o server server.cpp server.h -lpthread
 
